--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ configparser==7.0.0
 constantly==23.10.4
 contourpy==1.3.2
 coverage==7.5.4
-coveralls>=4.0.0,<5.0.0
+coveralls==3.3.1
 Crypto.Cipher==1
 cryptography==45.0.4
 cycler==0.12.1
