--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ constantly==23.10.4
 contourpy==1.3.2
 coverage==6.5.0
 coveralls==3.3.1
-cryptography==45.0.4
+cryptography<42
 cycler==0.12.1
 dash==2.18.1
 dash-bootstrap-components==1.6.0
@@ -103,7 +103,7 @@ pyarrow==16.1.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycparser==2.22
-pycryptodome==3.19.0
+pycryptodome
 pydantic==2.9.2
 pydantic_core==2.23.4
 pyee==11.1.0
