Add buildCommand to create writable cargo directories for Rust build

--- a/render.yaml
+++ b/render.yaml
@@ -6,4 +6,6 @@ services:
         value: /tmp/cargo
       - key: RUSTUP_HOME
         value: /tmp/rustup
-    
+    buildCommand: |
+      mkdir -p /tmp/cargo /tmp/rustup
+      pip install -r requirements.txt
