Add Render buildCommand and environment variables

--- a/render.yaml
+++ b/render.yaml
@@ -1,11 +1,16 @@
 services:
   - type: web
     env: python
+    buildCommand: |
+      curl https://sh.rustup.rs -sSf | sh -s -- -y
+      source $HOME/.cargo/env
+      rustup default stable
+      mkdir -p /tmp/cargo /tmp/rustup
+      export CARGO_HOME=/tmp/cargo
+      export RUSTUP_HOME=/tmp/rustup
+      pip install -r requirements.txt
     envVars:
       - key: CARGO_HOME
         value: /tmp/cargo
       - key: RUSTUP_HOME
         value: /tmp/rustup
-    buildCommand: |
-      mkdir -p /tmp/cargo /tmp/rustup
-      pip install -r requirements.txt
