Add buildCommand to create writable cargo directories for Rust build

--- a/render.yaml
+++ b/render.yaml
@@ -2,12 +2,9 @@ services:
   - type: web
     env: python
     buildCommand: |
-      curl https://sh.rustup.rs -sSf | sh -s -- -y
+      curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
       source $HOME/.cargo/env
       rustup default stable
-      mkdir -p /tmp/cargo /tmp/rustup
-      export CARGO_HOME=/tmp/cargo
-      export RUSTUP_HOME=/tmp/rustup
       pip install -r requirements.txt
     envVars:
       - key: CARGO_HOME
